# osso-applet-textinput

./: Makefile.am  configure.ac
data/: cptextinput-him.desktop  cptextinput.desktop
debian/: changelog  control  dirs  osso-applet-textinput.install  rules
src/: Makefile.am  applet_main.c  cptextinput.c  cptextinput.h  tis.c
