SUBDIRS = src

hildoncpdesktopentry_DATA = data/cptextinput.desktop
himmenu_DATA = data/cptextinput-him.desktop

DISTCLEANFILES = \
	aclocal.m4 \
	config.h.in \
	Makefile.in \
	configure \
	autom4te.cache/* \
	debian/files \
	debian/*.debhelper \
	debian/*.substvars \
	config.sub \
	config.guess \
	ltmain.sh \
	libtool \
	depcomp \
	install-sh \
	missing \
	mkinstalldirs \
	src/Makefile.in

